Fixing Up For Portfolio: Fixed spacing issue

--- a/huddle-landing-page-679023-master/index.css
+++ b/huddle-landing-page-679023-master/index.css
@@ -12,7 +12,8 @@ body {
 }
 
 .root {  
-  height: 100vh;
+  height: auto;
+  padding: 30px 0px;
   background-image: url("./images/bg-desktop.svg");
   background-size: cover;
   background-position: center;
